Fix matchmaking bugs